some changes trying to implement OAuth
