# models/index.js
@@ -1,12 +1,12 @@
 const dbConfig = require('../db/connect.js');
-
 const mongoose = require('mongoose');
+
 mongoose.Promise = global.Promise;
 
 const db = {};
 db.mongoose = mongoose;
 db.url = dbConfig.url;
-db.observation = require('./observation.js')(mongoose);
-db.user = require('./user.js')(mongoose);
+db.observation = require('./observation.js');
+db.user = require('./user.js');
 
 module.exports = db;
