# models/observation.js
@@ -1,80 +1,52 @@
-module.exports = (mongoose) => {
-    const Observation = mongoose.model(
-        'Observation',
-        mongoose.Schema({
-            username: {
-                type: String,
-                required: true
-            },
-            observation: {
-                type: String,
-                required: true
-            },
-            object_type: {
-                type: String,
-                required: true
-            },
-            date: {
-                type: Date,
-                required: true
-            },
-            time: {
-                type: String
-            },
-            time_zone: {
-                type: String,
-            },
-            location: {
-                country: {
-                    type: String,
-                    required: true
-                },
-                state: {
-                    type: String,
-                    required: true
-                },
-                city: {
-                    type: String,
-                    required: true
-                },
-                coordinates: {
-                    latitude: {
-                        type: Number
-                    },
-                    longitude: {
-                        type: Number
-                    },
-                },
-            },
-            equipment: {
-                equipment_type: {
-                    type: String
-                },
-                make: {
-                    type: String
-                },
-                model: {
-                    type: String
-                },
-                serial_number: {
-                    type: String
-                }
-            },
-            weather_conditions: {
-                type: String,
-            },
-            visibility_conditions: {
-                type: String,
-            },
-            duration: {
-                type: String,
-            },
-            notes: {
-                type: String
-            }
-        }),
-        'observation'
-    );
+const mongoose = require('mongoose')
 
-    return Observation;
-};
+const ObservationSchema = new mongoose.Schema({
+    title: {
+        type: String,
+        required: true,
+        trim: true,
+    },
+    observation: {
+        type: String,
+        required: true
+    },
+    object_type: {
+        type: String,
+        required: true
+    },
+    date: {
+        type: Date,
+        required: true
+    },
+    time: {
+        type: String
+    },
+    location: {
+        type: String,
+        required: true
+    },
+    equipment: {
+        type: String,
+    },
+    duration: {
+        type: String,
+    },
+    notes: {
+        type: String
+    },
+    status: {
+        type: String,
+        default: 'public',
+        enum: ['public', 'private'],
+    },
+    user: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'User',
+    },
+    createdAt: {
+        type: Date,
+        default: Date.now,
+    },
+})
+
+module.exports = mongoose.model('Observation', ObservationSchema)
