# routes/observation.js
@@ -1,16 +1,28 @@
 const express = require('express');
-const { getObservations, getSingleObservation, createObservation, updateObservation, deleteObservation } = require('../controllers/observation');
-const { validateUsername, validateObservation } = require('../middleware/validation');
-
 const router = express.Router();
+const { getObservations, getSingleObservation, createObservation, updateObservation, deleteObservation
+} = require('../controllers/observation');
+const { validateUsername, validateObservation } = require('../middleware/validation');
+const { ensureAuth } = require('../middleware/user');
 
-router.route('/')
-  .get(getObservations)
-  .post(validateObservation, createObservation);
+// @desc    Get all observations
+// @route   GET /observations
+router.get('/', ensureAuth, getObservations);
 
-router.route('/:username')
-  .get(validateUsername, getSingleObservation)
-  .put(validateObservation, updateObservation)
-  .delete(validateUsername, deleteObservation);
+// @desc    Create a new observation
+// @route   POST /observations
+router.post('/', ensureAuth, validateObservation, createObservation);
+
+// @desc    Get a single observation by username
+// @route   GET /observations/:username
+router.get('/:username', ensureAuth, validateUsername, getSingleObservation);
+
+// @desc    Update an observation
+// @route   PUT /observations/:username
+router.put('/:username', ensureAuth, validateUsername, validateObservation, updateObservation);
+
+// @desc    Delete an observation
+// @route   DELETE /observations/:username
+router.delete('/:username', ensureAuth, validateUsername, deleteObservation);
 
 module.exports = router;
